tests/upgrade: gather more logs
Also disable firwalld AllowZoneDrifting because it's not supported in
RHEL-9.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -439,6 +439,8 @@ Upgrade:
       - ci-artifacts
       - install_console.log
       - upgrade_console.log
+      - leapp-preupgrade.log
+      - leapp-report.txt
       - osbuild-upgrade8to9.log
       - osbuild-upgrade8to9.json
     when: always
