--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -407,6 +407,8 @@ Upgrade:
       - ci-artifacts
       - install_console.log
       - upgrade_console.log
+      - leapp-preupgrade.log
+      - leapp-report.txt
       - osbuild-upgrade8to9.log
       - osbuild-upgrade8to9.json
     when: always
