--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -285,7 +285,7 @@ OSTree:
       - RUNNER:
           - rhos-01/fedora-35-x86_64
           - rhos-01/rhel-8.5-ga-x86_64
-          - rhos-01/rhel-8.6-nightly-x86_64
+          - rhos-01/rhel-8.6-nightly-x86_64-large
           - rhos-01/rhel-9.0-nightly-x86_64
           - rhos-01/centos-stream-8-x86_64
 
