--- a/test/data/ansible/check_ostree_nort.yaml
+++ b/test/data/ansible/check_ostree_nort.yaml
@@ -451,6 +451,10 @@
           reboot:
           become: yes
 
+        - name: wait for connection to become reachable/usable
+          wait_for_connection:
+            delay: 30
+
         - name: waits until instance is reachable
           wait_for:
             host: "{{ ansible_all_ipv4_addresses[0] }}"
