ci: large runners for some ostree tests
The longer running ostree tests (all except ostree.sh) benefit from
running on large runners because of their long runtime. Changing all to
large runners. Should not be a problem with our increased Openstack
quota.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -276,7 +276,7 @@ New OSTree:
       - RUNNER:
           - rhos-01/rhel-8.6-nightly-x86_64-large
           - rhos-01/rhel-9.0-nightly-x86_64-large
-          - rhos-01/centos-stream-8-x86_64
+          - rhos-01/centos-stream-8-x86_64-large
           - rhos-01/centos-stream-9-x86_64-large
 
 OSTree simplified installer:
@@ -289,8 +289,8 @@ OSTree simplified installer:
     matrix:
       - RUNNER:
           - rhos-01/rhel-8.6-nightly-x86_64-large
-          - rhos-01/centos-stream-8-x86_64
-          - rhos-01/rhel-9.0-nightly-x86_64
+          - rhos-01/centos-stream-8-x86_64-large
+          - rhos-01/rhel-9.0-nightly-x86_64-large
           - rhos-01/centos-stream-9-x86_64-large
 
 OSTree raw image:
@@ -302,9 +302,9 @@ OSTree raw image:
   parallel:
     matrix:
       - RUNNER:
-          - rhos-01/rhel-8.6-nightly-x86_64
-          - rhos-01/centos-stream-8-x86_64
-          - rhos-01/rhel-9.0-nightly-x86_64
+          - rhos-01/rhel-8.6-nightly-x86_64-large
+          - rhos-01/centos-stream-8-x86_64-large
+          - rhos-01/rhel-9.0-nightly-x86_64-large
           - rhos-01/centos-stream-9-x86_64-large
 
 .INTEGRATION_TESTS: &INTEGRATION_TESTS
