--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -421,6 +421,18 @@ RHEL 9 on 8:
     INTERNAL_NETWORK: "true"
     DISTRO_CODE: rhel-90
 
+Multi-tenancy:
+  stage: test
+  extends: .terraform
+  rules:
+    - if: '$CI_PIPELINE_SOURCE != "schedule"'
+  script:
+    - schutzbot/deploy.sh
+    - /usr/libexec/tests/osbuild-composer/multi-tenancy.sh
+  variables:
+    RUNNER: aws/rhel-8.5-ga-x86_64
+    INTERNAL_NETWORK: "true"
+
 Upgrade:
   stage: test
   extends: .terraform/openstack
