--- a/test/data/ansible/check_ostree.yaml
+++ b/test/data/ansible/check_ostree.yaml
@@ -176,6 +176,10 @@
       command: findmnt -r -o SOURCE -n /var
       register: result_var_mount_point
 
+    - set_fact:
+        device_name: /dev/vda5
+      when: "'/dev/vda4' in result_df.stdout"
+
     - name: "/var should be mounted on {{ device_name }}[/ostree/deploy/{{ image_type }}/var]"
       block:
         - assert:
@@ -210,6 +214,10 @@
         - name: failed count + 1
           set_fact:
             failed_counter: "{{ failed_counter | int + 1 }}"
+
+    - set_fact:
+        device_name: /dev/vda4
+      when: "'/dev/vda4' in result_df.stdout"
 
     # case: check /usr mount point
     - name: check /usr mount point
