--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -212,7 +212,7 @@ objects:
       jwt_keys_urls = ["${RH_SSO_BASE_URL}/protocol/openid-connect/certs", "${MAS_SSO_BASE_URL}/protocol/openid-connect/certs"]
       jwt_acl_file = "${COMPOSER_CONFIG_DIR}/acl.yml"
       [koji.aws_config]
-      bucket = "imagebuilder.service.staging"
+      bucket = "${COMPOSER_CONFIG_BUCKET_NAME}"
       [worker]
       request_job_timeout = "20s"
       base_path = "/api/image-builder-worker/v1"
@@ -341,6 +341,10 @@ parameters:
     name: COMPOSER_CONFIG_DIR
     required: true
     value: "/etc/osbuild-composer"
+  - description: Bucket to store aws artifacts
+    name: COMPOSER_CONFIG_BUCKET_NAME
+    required: true
+    value: "imagebuilder.service.staging"
   - description: composer-api port
     name: COMPOSER_API_PORT
     required: true
