tests/upgrade: add user choice for vdo devices check
This is a user choice that has to be picked before the upgrade or it
acts as an inhibitor.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -434,6 +434,7 @@ Upgrade:
       - install_console.log
       - upgrade_console.log
       - leapp-preupgrade.log
+      - leapp-upgrade.log
       - leapp-report.txt
       - osbuild-upgrade8to9.log
       - osbuild-upgrade8to9.json
