--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,20 @@ jobs:
       - name: Send coverage to codecov.io
         run: bash <(curl -s https://codecov.io/bash)
 
+  python-lint:
+    name: "🐍 Lint (dnf-json)"
+    runs-on: ubuntu-latest
+    container:
+      image: docker.io/library/fedora:latest
+    steps:
+    - uses: actions/checkout@v2.4.0
+    - name: Install dependencies
+      run: |
+        dnf -y install python3-pylint
+    - name: Analysing the code with pylint
+      run: |
+        python3 -m pylint dnf-json
+
   unit-tests:
     name: "🛃 Unit tests"
     runs-on: ubuntu-20.04
