Weldr: support GCP upload target
Add support for importing the GCE image into GCP using Weldr API. The
credentials to be used can be specified in the upload settings and will
be then used by the worker to authenticate with GCP.

The GCP target credentials are passed to Weldr API as base64 encoded
content of the GCP credentials JSON file. The reason is that the JSON
file contains many values and its format could change in the future.
This way, the Weldr API does not rely on the credentials file content
format in any way.

Add a new test case for the GCP upload via Weldr and run it in CI.

Signed-off-by: Tomas Hozza <thozza@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -367,7 +367,7 @@ Rebase OSTree:
           - rhos-01/centos-stream-8-x86_64-large
           - rhos-01/centos-stream-9-x86_64-large
 
-.integration:
+.integration_base:
   stage: test
   extends: .terraform
   rules:
@@ -376,17 +376,39 @@ Rebase OSTree:
   script:
     - schutzbot/deploy.sh
     - /usr/libexec/tests/osbuild-composer/${SCRIPT}
+
+.rhel_runners: &rhel_runners
+    RUNNER:
+      - aws/centos-stream-8-x86_64
+      - aws/rhel-8.5-ga-x86_64
+      - aws/rhel-8.6-nightly-x86_64
+      - aws/rhel-9.0-nightly-x86_64
+      - aws/centos-stream-9-x86_64
+    INTERNAL_NETWORK: ["true"]
+
+.integration_rhel:
+  extends: .integration_base
   parallel:
     matrix:
-      - RUNNER:
-          - aws/fedora-34-x86_64
-          - aws/fedora-35-x86_64
-          - aws/centos-stream-8-x86_64
-          - aws/rhel-8.5-ga-x86_64
-          - aws/rhel-8.6-nightly-x86_64
-          - aws/rhel-9.0-nightly-x86_64
-          - aws/centos-stream-9-x86_64
-        INTERNAL_NETWORK: ["true"]
+      - *rhel_runners
+
+.fedora_runners: &fedora_runners
+    RUNNER:
+      - aws/fedora-34-x86_64
+      - aws/fedora-35-x86_64
+
+.integration_fedora:
+  extends: .integration_base
+  parallel:
+    matrix:
+      - *fedora_runners
+
+.integration:
+  extends: .integration_base
+  parallel:
+    matrix:
+      - *fedora_runners
+      - *rhel_runners
 
 koji.sh:
   extends: .integration
@@ -402,6 +424,12 @@ azure.sh:
   extends: .integration
   variables:
     SCRIPT: azure.sh
+
+# The required GCE image type is not supported on Fedora
+gcp.sh:
+  extends: .integration_rhel
+  variables:
+    SCRIPT: gcp.sh
 
 vmware.sh:
   extends: .integration
