--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -488,8 +488,9 @@ Installer:
     matrix:
       - RUNNER:
           - rhos-01/rhel-8.6-nightly-x86_64
-          - rhos-01/rhel-9.0-nightly-x86_64
-          - rhos-01/centos-stream-9-x86_64
+          # disable until https://bugzilla.redhat.com/show_bug.cgi?id=2059565 is fixed
+          #- rhos-01/rhel-9.0-nightly-x86_64
+          #- rhos-01/centos-stream-9-x86_64
 
 SCHEDULED_CLOUD_CLEANER:
   stage: cleanup
