ci: run ci_details.sh in before_script
This is a nice script showing potentially useful details about the
runner so let's execute it at the begining of each job.

(cherry picked from commit d8ea259f8b13e32662b16ee2bfdbc893a89c7420)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ stages:
   - finish
 
 .base:
+  before_script:
+    - schutzbot/ci_details.sh > ci-details
   after_script:
     - schutzbot/update_github_status.sh update
     - schutzbot/save_journal.sh
@@ -18,6 +20,7 @@ stages:
     paths:
       - journal-log.gpg
       - ci-artifacts
+      - ci-details
       - "*.repo"
       - COMPOSER_NVR
     when: always
