--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -202,7 +202,9 @@ objects:
       - claim: user_id
         pattern: ^(54629121|54629180|54597799|54676085|54968801)$
       - claim: rh-org-id
-        pattern: ^(13826359)$
+        pattern: ^(13826359|15842261)$
+      - claim: account_id
+        pattern: ^(15842261)$
     osbuild-composer.toml: |
       log_level = "info"
       [koji]
