Add tests for blueprints without explicit definition for /
- currently disabled on Fedora until PR #2461 lands

Related: RHBZ#2049500

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -249,10 +249,15 @@ regression-include-excluded-packages:
   variables:
     SCRIPT: regression-include-excluded-packages.sh
 
-regression-old-worker-new-composer.sh:
+regression-old-worker-new-composer:
   extends: .regression
   variables:
     SCRIPT: regression-old-worker-new-composer.sh
+
+regression-no-explicit-rootfs-definition:
+  extends: .regression
+  variables:
+    SCRIPT: regression-no-explicit-rootfs-definition.sh
 
 Image Tests:
   stage: test
